# gouda-postgres-workbench

./: LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json
.github/workflows/: pages.yml  release.yml
docs/: index.html
scripts/: dev-run.sh
src/: AiContextModal.tsx  App.css  App.tsx  ConnectionModal.tsx  DiffView.tsx  ERView.tsx  Editor.tsx  Grid.tsx  Inspector.tsx  JsonTree.test.ts  JsonTree.tsx  MonitorView.tsx  NotifyView.tsx  Palette.tsx  PlanView.tsx  StructureView.tsx  clipboard.ts  export.test.ts  export.ts  fuzzy.test.ts  fuzzy.ts  gridSort.test.ts  gridSort.ts  insertCompletion.test.ts  insertCompletion.ts  jsonSets.test.ts  jsonSets.ts  metaCommands.test.ts  metaCommands.ts  rowCopy.test.ts  rowCopy.ts  sqlNamespace.test.ts  sqlNamespace.ts  sqlSafety.test.ts  sqlSafety.ts  sqlStatements.test.ts  sqlStatements.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  db.rs  diff.rs  edits.rs  history.rs  lib.rs  main.rs  notify.rs  profiles.rs  snippets.rs  store.rs  tunnel.rs
