[package]
name = "gouda"
version = "0.1.0"
description = "Gouda — a Postgres workbench for macOS"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gouda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
postgres-types = "0.2"
rust_decimal = { version = "1", features = ["db-tokio-postgres"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
rusqlite = { version = "0.40.1", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native"] }
russh = "0.62.2"
tauri-plugin-dialog = "2.7.1"
postgres-native-tls = "0.5.3"
native-tls = "0.2.18"

